[gd_scene load_steps=11 format=2]

[ext_resource path="res://prefabs/Meshes.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/RasterUI.gd" type="Script" id=2]
[ext_resource path="res://scripts/CameraController.gd" type="Script" id=3]
[ext_resource path="res://scripts/RasterCamera.gd" type="Script" id=4]
[ext_resource path="res://materials/red_transparent.tres" type="Material" id=5]
[ext_resource path="res://scripts/FrustumRenderer.gd" type="Script" id=6]
[ext_resource path="res://instances/CameraMesh.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/RasterVisualizer.gd" type="Script" id=8]
[ext_resource path="res://scripts/ProfilerLabel.gd" type="Script" id=9]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -123.034, -70.0191, -99.9977, 246.067, 140.038, 99.9477 ),
"array_data": PoolByteArray( 140, 250, 123, 189, 10, 103, 15, 61, 205, 204, 76, 189, 140, 250, 123, 61, 10, 103, 15, 61, 205, 204, 76, 189, 140, 250, 123, 61, 10, 103, 15, 189, 205, 204, 76, 189, 140, 250, 123, 189, 10, 103, 15, 61, 205, 204, 76, 189, 140, 250, 123, 61, 10, 103, 15, 189, 205, 204, 76, 189, 140, 250, 123, 189, 10, 103, 15, 189, 205, 204, 76, 189, 51, 17, 246, 66, 202, 9, 140, 66, 206, 254, 199, 194, 51, 17, 246, 194, 202, 9, 140, 66, 206, 254, 199, 194, 51, 17, 246, 194, 202, 9, 140, 194, 206, 254, 199, 194, 51, 17, 246, 66, 202, 9, 140, 66, 206, 254, 199, 194, 51, 17, 246, 194, 202, 9, 140, 194, 206, 254, 199, 194, 51, 17, 246, 66, 202, 9, 140, 194, 206, 254, 199, 194, 51, 17, 246, 194, 202, 9, 140, 66, 206, 254, 199, 194, 140, 250, 123, 189, 10, 103, 15, 61, 205, 204, 76, 189, 140, 250, 123, 189, 10, 103, 15, 189, 205, 204, 76, 189, 51, 17, 246, 194, 202, 9, 140, 66, 206, 254, 199, 194, 140, 250, 123, 189, 10, 103, 15, 189, 205, 204, 76, 189, 51, 17, 246, 194, 202, 9, 140, 194, 206, 254, 199, 194, 140, 250, 123, 61, 10, 103, 15, 61, 205, 204, 76, 189, 51, 17, 246, 66, 202, 9, 140, 66, 206, 254, 199, 194, 51, 17, 246, 66, 202, 9, 140, 194, 206, 254, 199, 194, 140, 250, 123, 61, 10, 103, 15, 61, 205, 204, 76, 189, 51, 17, 246, 66, 202, 9, 140, 194, 206, 254, 199, 194, 140, 250, 123, 61, 10, 103, 15, 189, 205, 204, 76, 189, 140, 250, 123, 189, 10, 103, 15, 61, 205, 204, 76, 189, 51, 17, 246, 194, 202, 9, 140, 66, 206, 254, 199, 194, 51, 17, 246, 66, 202, 9, 140, 66, 206, 254, 199, 194, 140, 250, 123, 189, 10, 103, 15, 61, 205, 204, 76, 189, 51, 17, 246, 66, 202, 9, 140, 66, 206, 254, 199, 194, 140, 250, 123, 61, 10, 103, 15, 61, 205, 204, 76, 189, 140, 250, 123, 61, 10, 103, 15, 189, 205, 204, 76, 189, 51, 17, 246, 66, 202, 9, 140, 194, 206, 254, 199, 194, 51, 17, 246, 194, 202, 9, 140, 194, 206, 254, 199, 194, 140, 250, 123, 61, 10, 103, 15, 189, 205, 204, 76, 189, 51, 17, 246, 194, 202, 9, 140, 194, 206, 254, 199, 194, 140, 250, 123, 189, 10, 103, 15, 189, 205, 204, 76, 189 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[node name="Test" type="Spatial"]

[node name="Walls" type="CSGBox" parent="."]
transform = Transform( 1.21157e-07, 1.68354e-08, -1, -4.98257e-09, 1, 1.68354e-08, 1, 4.98257e-09, 1.21157e-07, 5.25095, -1.12008e-07, -65.2623 )
use_collision = true
invert_faces = true
width = 160.0
height = 12.0
depth = 160.0

[node name="Meshes" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.2151, -5.48626, -47.9974 )

[node name="Meshes2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.598, -5.48626, -47.9974 )

[node name="Meshes3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.598, -5.48626, -8.01106 )

[node name="Meshes4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7522, -5.48626, -8.01106 )

[node name="Meshes5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.1711, -5.48626, -8.01106 )

[node name="Meshes6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.1711, -5.48626, -42.8739 )

[node name="Meshes7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.1711, -5.48626, -82.4824 )

[node name="Meshes8" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.5441, -5.48626, -82.4824 )

[node name="Meshes9" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.21287, -5.48626, -82.4824 )

[node name="Meshes10" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7377, -5.48626, -82.4824 )

[node name="Meshes17" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.1711, -5.48626, -115.927 )

[node name="Meshes16" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.5441, -5.48626, -115.927 )

[node name="Meshes15" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.21287, -5.48626, -115.927 )

[node name="Meshes14" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7377, -5.48626, -115.927 )

[node name="Meshes11" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7377, -5.48626, -46.9818 )

[node name="Meshes12" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7377, -5.48626, -9.46193 )

[node name="Meshes13" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7377, -5.48626, -9.46193 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstPersonPanel" type="Panel" parent="UI"]
anchor_right = 0.5
anchor_bottom = 0.5

[node name="ViewportContainer" type="ViewportContainer" parent="UI/FirstPersonPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="UI/FirstPersonPanel/ViewportContainer"]
size = Vector2( 492, 280 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Controller" type="Spatial" parent="UI/FirstPersonPanel/ViewportContainer/Viewport"]
script = ExtResource( 3 )
move_speed = 15.0

[node name="RasterCamera" type="Camera" parent="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller"]
cull_mask = 1048573
script = ExtResource( 4 )

[node name="FrustumRenderer" type="MeshInstance" parent="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera"]
layers = 2
material_override = ExtResource( 5 )
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 6 )

[node name="CameraMesh" parent="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" instance=ExtResource( 7 )]

[node name="ThirdPersonPanel" type="Panel" parent="UI"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="ViewportContainer" type="ViewportContainer" parent="UI/ThirdPersonPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Viewport" type="Viewport" parent="UI/ThirdPersonPanel/ViewportContainer"]
size = Vector2( 492, 280 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="UI/ThirdPersonPanel/ViewportContainer/Viewport"]
transform = Transform( 0.707107, 0.276732, -0.650707, 0, 0.920239, 0.391358, 0.707107, -0.276732, 0.650707, -19.224, 5.271, 2.39 )
current = true

[node name="VisualizerPanel" type="Panel" parent="UI"]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.857361
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RasterVisualizer" type="TextureRect" parent="UI/VisualizerPanel"]
margin_left = 10.0
margin_top = 20.0
margin_right = 522.0
margin_bottom = 276.0
rect_min_size = Vector2( 512, 256 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )

[node name="SettingsPanel" type="Panel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CameraPanel" type="Panel" parent="UI/SettingsPanel/VBoxContainer"]
margin_right = 640.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 370.0
margin_bottom = 70.0

[node name="HBoxContainer5" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_right = 360.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Update"

[node name="UpdateCheckBox" type="CheckBox" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer5"]
margin_left = 54.0
margin_right = 78.0
margin_bottom = 24.0
pressed = true

[node name="HBoxContainer6" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 360.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Visualize"

[node name="VisualizeCheckBox" type="CheckBox" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer6"]
margin_left = 61.0
margin_right = 85.0
margin_bottom = 24.0
pressed = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_top = 56.0
margin_right = 360.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "FOV"

[node name="FOVSlider" type="HSlider" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 11
size_flags_vertical = 3
min_value = 50.0
max_value = 110.0
value = 70.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 360.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Z Near"

[node name="NearPlaneSlider" type="HSlider" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
step = 0.01
value = 0.01
tick_count = 200
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_top = 96.0
margin_right = 360.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "Z Far"

[node name="FarPlaneSlider" type="HSlider" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
step = 0.01
value = 10.0
tick_count = 200
ticks_on_borders = true

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer"]
margin_top = 116.0
margin_right = 360.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 9
text = "HOR+"

[node name="CheckBox" type="CheckBox" parent="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer4"]
margin_left = 54.0
margin_right = 78.0
margin_bottom = 24.0
pressed = true

[node name="ProfilerLabel" type="Label" parent="UI/SettingsPanel/VBoxContainer"]
margin_top = 202.0
margin_right = 640.0
margin_bottom = 400.0
size_flags_vertical = 3
script = ExtResource( 9 )
[connection signal="fov_changed" from="UI" to="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" method="set_fov"]
[connection signal="keep_aspect_changed" from="UI" to="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" method="set_keep_aspect_mode"]
[connection signal="update_changed" from="UI" to="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" method="set_update"]
[connection signal="visualize_changed" from="UI" to="UI/VisualizerPanel/RasterVisualizer" method="set_visible"]
[connection signal="z_far_changed" from="UI" to="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" method="set_zfar"]
[connection signal="z_near_changed" from="UI" to="UI/FirstPersonPanel/ViewportContainer/Viewport/Controller/RasterCamera" method="set_znear"]
[connection signal="toggled" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer5/UpdateCheckBox" to="UI" method="set_update"]
[connection signal="toggled" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer6/VisualizeCheckBox" to="UI" method="set_visualize"]
[connection signal="value_changed" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer/FOVSlider" to="UI" method="set_fov"]
[connection signal="value_changed" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer2/NearPlaneSlider" to="UI" method="set_z_near"]
[connection signal="value_changed" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer3/FarPlaneSlider" to="UI" method="set_z_far"]
[connection signal="toggled" from="UI/SettingsPanel/VBoxContainer/CameraPanel/VBoxContainer/HBoxContainer4/CheckBox" to="UI" method="set_flip_fov"]
